# sqlima

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/prompts/: c-teacher.prompt.md
include/: sqlima.h  sqlima_platform.h
src/: CMakeLists.txt  cli.c  input.c  input.h  main.c  memory.c  memory.h  meta_command.c  meta_command.h
src/cli/: CMakeLists.txt  cli.c  cli.h  input.c  input.h
tests/: CMakeLists.txt
tools/: setup.cmd  setup.sh
